<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">环监执法系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- splash -->
    <string name="splash_title1">西安市环境保护局</string>
    <string name="splash_title2">环境监察移动执法系统</string>

    <!-- 登录 -->
    <string name="account">账    号</string>
    <string name="passwd">密    码</string>
    <string name="login">登    录</string>
    <string name="hint_passwd">请输入密码</string>
    <string name="hint_mobilephone">请输入手机号码</string>
    <string name="text_remember_passwd">记住密码</string>
    <string name="text_forgot_passwd">忘记密码?</string>

    <!-- 移动执法 -->
    <string name="case_party">当事人:</string>
    <string name="case_corporation">法定代表人:</string>
    <string name="case_duty">职务:</string>
    <string name="case_phone">电话:</string>
    <string name="case_desc">案情介绍:</string>
    <string name="case_owner_opinion">承办人意见:</string>
    <string name="case_dept_opinion">承办部门意见:</string>
    <string name="case_leader_approve_opinion">承办部门意见:</string>
    <string name="remark">备注:</string>
    <string name="case_baseinfo">基本信息</string>
    <string name="case_pic">照片采集</string>
    <string name="case_video">视频采集</string>
    <string name="case_audio">声音采集</string>
    <string name="capture_photo">拍照</string>
    <string name="capture_video">录像</string>
    <string name="capture_audio">录音</string>
    <string name="play">播放</string>
    <string name="capture_audio_speak">请开始讲话</string>
    <!-- 企业查询 -->
    <string name="corp_name">企业名称:</string>
    <string name="corp_area">所在区域:</string>
    <string name="corp_type">企业性质:</string>
    <string name="corporation">企业法人:</string>

    <!-- panel -->
    <string name="nav1">任务管理</string>
    <string name="nav2">现场执法</string>
    <string name="nav3">移动应急</string>
    <string name="nav4">信息查询</string>
    <string name="nav5">环保手册</string>
    <string name="nav6">稽查考核</string>
    <string name="nav7">地图功能</string>
    <string name="nav8">数据同步</string>
    <string name="nav9">系统设置</string>
    <string name="confirm">确    定</string>
    <string name="submit">提    交</string>
    <string name="submit2">提交</string>
    <string name="query">查    询</string>
    <string name="main_home_label">主页</string>
    <string name="login_quit">退出</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="finish">结束</string>
    <string name="time_init">00:00:00</string>
    <string name="help_label">帮助</string>
    <string name="main_settings">设置</string>
    <string name="title_activity_jsondemo">JSONDemoActivity</string>
    <string name="action_settings">Settings</string>

</resources>