<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    android:background="@drawable/transparent_border"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:text="@string/capture_audio_speak"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/divider_horizontal_dim_dark" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/mike_normal" />

    <TextView
        android:id="@+id/timeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:text="@string/time_init"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/divider_horizontal_dim_dark" />

    <LinearLayout
        android:id="@+id/audioCancelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_layout_state"
        android:gravity="center"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textColor="@color/gray2"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>