<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/nav1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/item_state"
            android:orientation="vertical"
            android:paddingBottom="20dip"
            android:paddingTop="30dip" >

            <TextView
                android:drawableTop="@drawable/imgnav1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav1"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/list_line_v" />

        <LinearLayout
            android:id="@+id/nav2"
            android:background="@drawable/item_state"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dip"
            android:paddingTop="30dip" >

            <TextView
                android:drawableTop="@drawable/imgnav2"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav2"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/list_line_v" />

        <LinearLayout
            android:id="@+id/nav3"
            android:background="@drawable/item_state"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dip"
            android:paddingTop="30dip" >

            <TextView
                android:drawableTop="@drawable/imgnav3"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav3"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/nav4"
            android:background="@drawable/item_state"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dip"
            android:paddingTop="30dip" >

            <TextView
                android:drawableTop="@drawable/imgnav4"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav4"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/list_line_v" />

        <LinearLayout
            android:id="@+id/nav5"
            android:background="@drawable/item_state"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dip"
            android:paddingTop="30dip" >


            <TextView
                android:drawableTop="@drawable/imgnav5"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav5"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/list_line_v" />

        <LinearLayout
            android:id="@+id/nav6"
            android:background="@drawable/item_state"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dip"
            android:paddingTop="30dip" >


            <TextView
                android:drawableTop="@drawable/imgnav6"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav6"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/nav7"
            android:background="@drawable/item_state"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dip"
            android:paddingTop="30dip" >


            <TextView
                android:drawableTop="@drawable/imgnav7"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav7"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/list_line_v" />

        <LinearLayout
            android:id="@+id/nav8"
            android:background="@drawable/item_state"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dip"
            android:paddingTop="30dip" >


            <TextView
                android:drawableTop="@drawable/imgnav8"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav8"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/list_line_v" />

        <LinearLayout
            android:id="@+id/nav9"
            android:background="@drawable/item_state"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="20dip"
            android:paddingTop="30dip" >


            <TextView
                android:drawableTop="@drawable/imgnav9"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav9"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_line" />

</LinearLayout>